Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -714,6 +714,7 @@
 178.234.220.8 xmlrpc;
 178.234.55.247 xmlrpc;
 178.234.75.227 xmlrpc;
+178.237.248.21 xmlrpc;
 178.34.151.172 xmlrpc;
 178.34.151.199 xmlrpc;
 178.34.161.116 xmlrpc;
@@ -1342,6 +1343,7 @@
 35.240.143.31 xmlrpc;
 36.129.24.60 xmlrpc;
 36.138.56.214 xmlrpc;
+37.112.100.18 xmlrpc;
 37.113.158.73 xmlrpc;
 37.139.53.17 xmlrpc;
 37.139.53.191 xmlrpc;
@@ -1526,6 +1528,7 @@
 46.17.254.160 xmlrpc;
 46.174.53.21 xmlrpc;
 46.175.208.244 xmlrpc;
+46.175.24.236 xmlrpc;
 46.187.117.9 xmlrpc;
 46.22.51.155 xmlrpc;
 46.22.56.215 xmlrpc;
