--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1627,6 +1627,7 @@
 49.234.192.120 xmlrpc;
 49.234.23.207 xmlrpc;
 49.234.25.245 xmlrpc;
+49.234.35.33 xmlrpc;
 49.235.65.73 xmlrpc;
 49.235.74.169 xmlrpc;
 49.245.77.22 xmlrpc;
