--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -445,6 +445,7 @@
 14.29.186.72 xmlrpc;
 141.101.229.58 xmlrpc;
 141.98.133.196 xmlrpc;
+141.98.135.84 xmlrpc;
 141.98.84.23 xmlrpc;
 141.98.86.49 xmlrpc;
 143.198.192.58 xmlrpc;
@@ -845,6 +846,7 @@
 185.152.95.108 xmlrpc;
 185.152.95.242 xmlrpc;
 185.16.137.107 xmlrpc;
+185.166.161.123 xmlrpc;
 185.17.129.240 xmlrpc;
 185.17.88.88 xmlrpc;
 185.174.136.114 xmlrpc;
@@ -1287,6 +1289,7 @@
 2a03:d000:1585:ac5f:8417:a147:9ef9:46b2 xmlrpc;
 3.0.138.73 xmlrpc;
 31.12.92.159 xmlrpc;
+31.12.92.18 xmlrpc;
 31.129.196.10 xmlrpc;
 31.133.61.252 xmlrpc;
 31.134.189.145 xmlrpc;
@@ -1505,6 +1508,7 @@
 45.78.22.95 xmlrpc;
 45.81.136.220 xmlrpc;
 45.81.137.40 xmlrpc;
+45.83.119.14 xmlrpc;
 45.83.94.135 xmlrpc;
 45.83.94.20 xmlrpc;
 45.83.94.4 xmlrpc;
@@ -1513,7 +1517,10 @@
 45.86.1.86 xmlrpc;
 45.87.252.100 xmlrpc;
 45.87.253.30 xmlrpc;
+45.88.149.239 xmlrpc;
+45.89.100.114 xmlrpc;
 45.91.162.102 xmlrpc;
+45.92.124.60 xmlrpc;
 46.0.137.179 xmlrpc;
 46.138.72.172 xmlrpc;
 46.138.72.231 xmlrpc;
@@ -1683,6 +1690,7 @@
 5.23.50.27 xmlrpc;
 5.23.51.104 xmlrpc;
 5.23.51.195 xmlrpc;
+5.252.29.87 xmlrpc;
 5.253.102.177 xmlrpc;
 5.253.60.4 xmlrpc;
 5.254.176.200 xmlrpc;
