Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1129,6 +1129,7 @@
 212.232.44.250 xmlrpc;
 212.3.130.84 xmlrpc;
 212.3.142.172 xmlrpc;
+212.3.150.170 xmlrpc;
 212.3.150.198 xmlrpc;
 212.35.168.172 xmlrpc;
 212.35.181.168 xmlrpc;
@@ -2008,6 +2009,7 @@
 92.223.86.22 xmlrpc;
 92.223.86.25 xmlrpc;
 92.223.86.26 xmlrpc;
+92.253.252.55 xmlrpc;
 92.255.134.182 xmlrpc;
 92.255.211.127 xmlrpc;
 92.37.157.121 xmlrpc;
