Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2059,6 +2059,7 @@
 94.75.17.153 xmlrpc;
 94.75.186.206 xmlrpc;
 95.104.244.148 xmlrpc;
+95.107.18.52 xmlrpc;
 95.108.213.126 xmlrpc;
 95.108.213.130 xmlrpc;
 95.108.213.131 xmlrpc;
