--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -853,6 +853,7 @@
 185.197.33.8 xmlrpc;
 185.200.117.131 xmlrpc;
 185.200.240.65 xmlrpc;
+185.218.0.182 xmlrpc;
 185.218.108.205 xmlrpc;
 185.218.108.48 xmlrpc;
 185.225.33.46 xmlrpc;
@@ -1673,6 +1674,7 @@
 5.19.99.35 xmlrpc;
 5.2.36.169 xmlrpc;
 5.206.126.206 xmlrpc;
+5.227.203.6 xmlrpc;
 5.227.235.60 xmlrpc;
 5.227.7.68 xmlrpc;
 5.228.190.109 xmlrpc;
