--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1677,6 +1677,7 @@
 5.227.203.6 xmlrpc;
 5.227.235.60 xmlrpc;
 5.227.7.68 xmlrpc;
+5.228.176.57 xmlrpc;
 5.228.190.109 xmlrpc;
 5.228.81.24 xmlrpc;
 5.228.83.209 xmlrpc;
@@ -1815,6 +1816,7 @@
 8.219.64.236 xmlrpc;
 8.222.135.65 xmlrpc;
 80.234.3.53 xmlrpc;
+80.234.77.205 xmlrpc;
 80.244.32.159 xmlrpc;
 80.244.42.72 xmlrpc;
 80.244.44.132 xmlrpc;
