Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2135,6 +2135,7 @@
 95.37.224.58 xmlrpc;
 95.37.58.155 xmlrpc;
 95.54.207.203 xmlrpc;
+95.54.231.96 xmlrpc;
 95.54.8.187 xmlrpc;
 95.55.181.165 xmlrpc;
 95.68.131.78 xmlrpc;
