--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1475,6 +1475,7 @@
 43.254.157.54 xmlrpc;
 43.255.152.14 xmlrpc;
 43.255.152.6 xmlrpc;
+45.11.20.120 xmlrpc;
 45.11.20.190 xmlrpc;
 45.11.20.77 xmlrpc;
 45.11.5.249 xmlrpc;
@@ -1514,6 +1515,7 @@
 45.86.1.81 xmlrpc;
 45.86.1.86 xmlrpc;
 45.87.252.100 xmlrpc;
+45.87.252.109 xmlrpc;
 45.87.253.30 xmlrpc;
 45.88.149.239 xmlrpc;
 45.89.100.114 xmlrpc;
