--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -650,6 +650,7 @@
 176.112.242.165 xmlrpc;
 176.114.54.1 xmlrpc;
 176.115.142.213 xmlrpc;
+176.115.149.27 xmlrpc;
 176.115.51.46 xmlrpc;
 176.115.57.73 xmlrpc;
 176.119.22.17 xmlrpc;
@@ -749,6 +750,7 @@
 180.163.30.76 xmlrpc;
 180.163.30.85 xmlrpc;
 182.106.220.252 xmlrpc;
+182.43.18.230 xmlrpc;
 182.43.31.128 xmlrpc;
 182.43.64.21 xmlrpc;
 182.43.64.48 xmlrpc;
