--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2054,6 +2054,7 @@
 94.140.246.55 xmlrpc;
 94.141.124.198 xmlrpc;
 94.181.82.100 xmlrpc;
+94.190.4.214 xmlrpc;
 94.198.2.17 xmlrpc;
 94.228.207.236 xmlrpc;
 94.232.95.86 xmlrpc;
