Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1778,6 +1778,7 @@
 78.81.105.48 xmlrpc;
 78.81.155.102 xmlrpc;
 79.104.7.123 xmlrpc;
+79.126.114.157 xmlrpc;
 79.133.132.90 xmlrpc;
 79.139.131.9 xmlrpc;
 79.139.151.25 xmlrpc;
