--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -452,6 +452,7 @@
 143.198.94.86 xmlrpc;
 145.249.71.213 xmlrpc;
 145.249.78.114 xmlrpc;
+145.255.9.151 xmlrpc;
 145.255.9.38 xmlrpc;
 146.120.77.107 xmlrpc;
 146.158.100.21 xmlrpc;
@@ -855,6 +856,7 @@
 185.197.33.8 xmlrpc;
 185.200.117.131 xmlrpc;
 185.200.240.65 xmlrpc;
+185.205.238.239 xmlrpc;
 185.218.0.182 xmlrpc;
 185.218.108.205 xmlrpc;
 185.218.108.48 xmlrpc;
