--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1553,6 +1553,7 @@
 46.34.137.150 xmlrpc;
 46.39.34.27 xmlrpc;
 46.39.51.251 xmlrpc;
+46.39.56.134 xmlrpc;
 46.41.102.242 xmlrpc;
 46.45.219.149 xmlrpc;
 46.61.110.206 xmlrpc;
