--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -46,6 +46,7 @@
 103.189.88.194 xmlrpc;
 103.204.109.179 xmlrpc;
 103.21.142.12 xmlrpc;
+103.216.223.204 xmlrpc;
 103.216.223.206 xmlrpc;
 103.252.119.233 xmlrpc;
 103.253.24.18 xmlrpc;
