--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -105,6 +105,7 @@
 109.169.214.11 xmlrpc;
 109.184.111.172 xmlrpc;
 109.187.17.3 xmlrpc;
+109.187.87.192 xmlrpc;
 109.234.28.55 xmlrpc;
 109.248.12.243 xmlrpc;
 109.248.14.111 xmlrpc;
@@ -844,6 +845,8 @@
 185.125.72.146 xmlrpc;
 185.135.148.128 xmlrpc;
 185.14.69.250 xmlrpc;
+185.140.160.139 xmlrpc;
+185.146.74.105 xmlrpc;
 185.15.38.175 xmlrpc;
 185.152.95.108 xmlrpc;
 185.152.95.242 xmlrpc;
@@ -1550,6 +1553,7 @@
 46.241.60.38 xmlrpc;
 46.242.12.97 xmlrpc;
 46.242.13.167 xmlrpc;
+46.242.9.108 xmlrpc;
 46.242.9.199 xmlrpc;
 46.34.137.150 xmlrpc;
 46.39.34.27 xmlrpc;
@@ -2054,6 +2058,7 @@
 94.140.246.55 xmlrpc;
 94.141.124.198 xmlrpc;
 94.181.82.100 xmlrpc;
+94.19.164.97 xmlrpc;
 94.190.4.214 xmlrpc;
 94.198.2.17 xmlrpc;
 94.228.207.236 xmlrpc;
