--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -483,6 +483,7 @@
 146.70.192.180 xmlrpc;
 146.70.29.186 xmlrpc;
 146.70.29.189 xmlrpc;
+146.70.29.190 xmlrpc;
 147.78.181.87 xmlrpc;
 147.78.183.223 xmlrpc;
 148.66.134.3 xmlrpc;
@@ -1380,6 +1381,7 @@
 37.235.168.207 xmlrpc;
 37.252.255.135 xmlrpc;
 37.79.43.247 xmlrpc;
+37.79.8.195 xmlrpc;
 39.101.185.186 xmlrpc;
 39.101.72.35 xmlrpc;
 39.103.225.8 xmlrpc;
