--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1551,6 +1551,7 @@
 46.175.24.236 xmlrpc;
 46.187.117.9 xmlrpc;
 46.188.122.48 xmlrpc;
+46.191.232.250 xmlrpc;
 46.22.51.155 xmlrpc;
 46.22.56.215 xmlrpc;
 46.241.59.137 xmlrpc;
