Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1536,6 +1536,7 @@
 46.138.87.84 xmlrpc;
 46.146.205.94 xmlrpc;
 46.147.112.137 xmlrpc;
+46.151.151.94 xmlrpc;
 46.161.56.139 xmlrpc;
 46.161.60.233 xmlrpc;
 46.161.60.33 xmlrpc;
@@ -1617,6 +1618,7 @@
 47.122.1.41 xmlrpc;
 47.128.123.250 xmlrpc;
 47.128.191.163 xmlrpc;
+47.128.230.211 xmlrpc;
 47.240.21.171 xmlrpc;
 47.240.99.43 xmlrpc;
 47.241.16.82 xmlrpc;
