--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2005,6 +2005,7 @@
 92.119.178.3 xmlrpc;
 92.119.42.101 xmlrpc;
 92.119.42.102 xmlrpc;
+92.124.206.119 xmlrpc;
 92.126.119.31 xmlrpc;
 92.223.85.160 xmlrpc;
 92.223.85.197 xmlrpc;
