--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -207,6 +207,7 @@
 115.63.101.59 xmlrpc;
 115.63.101.99 xmlrpc;
 116.12.48.101 xmlrpc;
+116.14.136.60 xmlrpc;
 116.15.33.54 xmlrpc;
 116.48.20.221 xmlrpc;
 116.62.155.4 xmlrpc;
