Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2136,6 +2136,7 @@
 95.24.230.81 xmlrpc;
 95.24.233.234 xmlrpc;
 95.24.50.172 xmlrpc;
+95.24.69.152 xmlrpc;
 95.24.82.233 xmlrpc;
 95.25.24.98 xmlrpc;
 95.25.49.251 xmlrpc;
