Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2147,6 +2147,7 @@
 95.26.114.90 xmlrpc;
 95.26.121.96 xmlrpc;
 95.26.140.18 xmlrpc;
+95.26.140.69 xmlrpc;
 95.26.143.138 xmlrpc;
 95.26.166.80 xmlrpc;
 95.26.18.129 xmlrpc;
