Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2160,6 +2160,7 @@
 95.32.85.194 xmlrpc;
 95.37.224.58 xmlrpc;
 95.37.58.155 xmlrpc;
+95.52.132.196 xmlrpc;
 95.54.207.203 xmlrpc;
 95.54.231.96 xmlrpc;
 95.54.8.187 xmlrpc;
