--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1878,6 +1878,7 @@
 83.222.19.78 xmlrpc;
 83.234.146.183 xmlrpc;
 83.234.150.32 xmlrpc;
+83.234.150.33 xmlrpc;
 83.234.252.106 xmlrpc;
 83.69.6.197 xmlrpc;
 83.97.109.100 xmlrpc;
