Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -919,6 +919,7 @@
 185.61.223.196 xmlrpc;
 185.61.223.34 xmlrpc;
 185.68.247.229 xmlrpc;
+185.72.224.95 xmlrpc;
 185.78.113.254 xmlrpc;
 185.8.127.56 xmlrpc;
 185.81.144.108 xmlrpc;
