Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1287,7 +1287,6 @@
 2a03:6f00:6:1::517:3284 xmlrpc;
 2a03:6f00:6:1::517:3368 xmlrpc;
 2a03:6f00:6:1::57f9:2b15 xmlrpc;
-2a03:6f00:6:1::b972:f56b xmlrpc;
 2a03:6f00:6:1::b972:f56d xmlrpc;
 2a03:6f00:6:1::b972:f7e8 xmlrpc;
 2a03:6f00:6:1::bce1:17aa xmlrpc;
@@ -1374,6 +1373,7 @@
 37.140.192.43 xmlrpc;
 37.140.192.64 xmlrpc;
 37.140.192.75 xmlrpc;
+37.19.77.182 xmlrpc;
 37.19.77.187 xmlrpc;
 37.193.54.208 xmlrpc;
 37.193.93.30 xmlrpc;
