Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1844,6 +1844,7 @@
 8.222.135.65 xmlrpc;
 80.234.3.53 xmlrpc;
 80.234.77.205 xmlrpc;
+80.237.123.63 xmlrpc;
 80.244.32.159 xmlrpc;
 80.244.42.72 xmlrpc;
 80.244.44.132 xmlrpc;
@@ -2103,6 +2104,7 @@
 94.75.17.153 xmlrpc;
 94.75.186.206 xmlrpc;
 95.104.244.148 xmlrpc;
+95.106.69.232 xmlrpc;
 95.107.18.52 xmlrpc;
 95.108.213.126 xmlrpc;
 95.108.213.130 xmlrpc;
