--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -710,6 +710,7 @@
 178.187.226.222 xmlrpc;
 178.19.251.6 xmlrpc;
 178.20.31.226 xmlrpc;
+178.204.77.105 xmlrpc;
 178.205.51.99 xmlrpc;
 178.205.54.196 xmlrpc;
 178.210.68.1 xmlrpc;
@@ -1874,6 +1875,7 @@
 81.69.199.60 xmlrpc;
 81.71.5.172 xmlrpc;
 82.114.238.109 xmlrpc;
+82.149.135.175 xmlrpc;
 82.156.116.176 xmlrpc;
 82.156.179.196 xmlrpc;
 82.157.149.156 xmlrpc;
