--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1150,6 +1150,7 @@
 212.35.181.168 xmlrpc;
 212.35.185.233 xmlrpc;
 212.7.225.92 xmlrpc;
+212.7.229.227 xmlrpc;
 212.94.17.152 xmlrpc;
 212.94.25.195 xmlrpc;
 213.109.48.141 xmlrpc;
