Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1380,6 +1380,7 @@
 37.140.192.64 xmlrpc;
 37.140.192.75 xmlrpc;
 37.146.132.22 xmlrpc;
+37.188.16.215 xmlrpc;
 37.19.77.182 xmlrpc;
 37.19.77.187 xmlrpc;
 37.193.54.208 xmlrpc;
