--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1818,6 +1818,7 @@
 79.139.246.86 xmlrpc;
 79.172.69.129 xmlrpc;
 79.172.70.109 xmlrpc;
+79.173.87.105 xmlrpc;
 79.173.88.37 xmlrpc;
 79.174.32.111 xmlrpc;
 79.174.35.42 xmlrpc;
