--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -108,6 +108,7 @@
 109.184.111.172 xmlrpc;
 109.187.17.3 xmlrpc;
 109.187.87.192 xmlrpc;
+109.229.78.194 xmlrpc;
 109.234.28.55 xmlrpc;
 109.248.12.243 xmlrpc;
 109.248.14.111 xmlrpc;
