Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1750,6 +1750,7 @@
 5.255.231.63 xmlrpc;
 5.255.231.69 xmlrpc;
 5.255.231.95 xmlrpc;
+5.255.231.96 xmlrpc;
 5.3.105.174 xmlrpc;
 5.3.97.246 xmlrpc;
 5.42.213.178 xmlrpc;
