Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -9,6 +9,7 @@
 1.12.75.127 xmlrpc;
 1.14.45.178 xmlrpc;
 1.14.66.207 xmlrpc;
+1.14.77.81 xmlrpc;
 1.14.92.22 xmlrpc;
 1.14.93.149 xmlrpc;
 1.14.94.175 xmlrpc;
@@ -120,6 +121,7 @@
 109.248.49.148 xmlrpc;
 109.248.80.106 xmlrpc;
 109.252.100.20 xmlrpc;
+109.252.11.72 xmlrpc;
 109.252.206.29 xmlrpc;
 109.252.220.103 xmlrpc;
 109.252.45.254 xmlrpc;
@@ -1389,6 +1391,7 @@
 37.140.192.64 xmlrpc;
 37.140.192.75 xmlrpc;
 37.146.132.22 xmlrpc;
+37.18.38.115 xmlrpc;
 37.188.16.215 xmlrpc;
 37.19.77.182 xmlrpc;
 37.19.77.187 xmlrpc;
