Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1370,6 +1370,7 @@
 31.41.62.75 xmlrpc;
 31.42.46.4 xmlrpc;
 34.126.118.43 xmlrpc;
+34.142.151.15 xmlrpc;
 34.142.214.245 xmlrpc;
 34.92.81.103 xmlrpc;
 34.96.157.201 xmlrpc;
