--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1003,6 +1003,7 @@
 188.246.233.180 xmlrpc;
 188.255.53.140 xmlrpc;
 188.32.237.199 xmlrpc;
+188.64.167.176 xmlrpc;
 188.65.17.205 xmlrpc;
 188.65.245.63 xmlrpc;
 188.92.195.2 xmlrpc;
@@ -1885,6 +1886,7 @@
 80.64.26.125 xmlrpc;
 80.83.250.250 xmlrpc;
 80.87.195.44 xmlrpc;
+80.95.45.13 xmlrpc;
 81.163.148.118 xmlrpc;
 81.163.86.146 xmlrpc;
 81.177.126.193 xmlrpc;
