Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -931,6 +931,7 @@
 185.50.25.52 xmlrpc;
 185.50.25.54 xmlrpc;
 185.50.25.58 xmlrpc;
+185.50.25.6 xmlrpc;
 185.50.25.8 xmlrpc;
 185.54.179.229 xmlrpc;
 185.61.217.162 xmlrpc;
@@ -1802,6 +1803,7 @@
 62.176.11.23 xmlrpc;
 62.181.51.29 xmlrpc;
 62.182.50.188 xmlrpc;
+62.76.70.35 xmlrpc;
 66.42.60.37 xmlrpc;
 68.183.179.149 xmlrpc;
 68.183.186.147 xmlrpc;
