--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1702,6 +1702,7 @@
 5.140.71.117 xmlrpc;
 5.142.152.106 xmlrpc;
 5.142.164.15 xmlrpc;
+5.144.119.92 xmlrpc;
 5.145.254.43 xmlrpc;
 5.153.189.247 xmlrpc;
 5.157.32.20 xmlrpc;
