--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1035,6 +1035,7 @@
 193.233.82.239 xmlrpc;
 193.233.91.58 xmlrpc;
 193.32.202.56 xmlrpc;
+193.46.77.189 xmlrpc;
 193.47.33.32 xmlrpc;
 193.56.20.80 xmlrpc;
 193.93.194.176 xmlrpc;
