Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -951,6 +951,7 @@
 188.0.169.7 xmlrpc;
 188.0.175.68 xmlrpc;
 188.0.189.219 xmlrpc;
+188.123.230.30 xmlrpc;
 188.128.32.78 xmlrpc;
 188.130.128.166 xmlrpc;
 188.130.128.239 xmlrpc;
@@ -1276,7 +1277,6 @@
 27.42.98.202 xmlrpc;
 2a00:1838:37:1c6::38ed xmlrpc;
 2a00:f940:2:1:2::1453 xmlrpc;
-2a00:f940:2:4:2::239e xmlrpc;
 2a02:408:7722:54:77:222:54:219 xmlrpc;
 2a02:4780:3:1142:0:2b48:fa01:2 xmlrpc;
 2a02:4780:3:1335:0:1caf:8de0:2 xmlrpc;
