--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1716,6 +1716,7 @@
 5.165.197.51 xmlrpc;
 5.165.255.166 xmlrpc;
 5.166.225.27 xmlrpc;
+5.166.72.32 xmlrpc;
 5.167.168.8 xmlrpc;
 5.18.144.175 xmlrpc;
 5.18.152.72 xmlrpc;
