Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2001,6 +2001,7 @@
 88.147.153.153 xmlrpc;
 88.147.173.113 xmlrpc;
 88.151.92.63 xmlrpc;
+88.80.60.29 xmlrpc;
 89.106.168.238 xmlrpc;
 89.109.48.63 xmlrpc;
 89.109.51.174 xmlrpc;
