--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1926,6 +1926,7 @@
 82.157.52.7 xmlrpc;
 82.180.152.46 xmlrpc;
 82.180.152.60 xmlrpc;
+82.208.107.107 xmlrpc;
 83.139.147.12 xmlrpc;
 83.171.225.209 xmlrpc;
 83.217.200.128 xmlrpc;
