--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1210,6 +1210,7 @@
 213.232.235.83 xmlrpc;
 213.234.9.82 xmlrpc;
 213.24.125.184 xmlrpc;
+213.24.125.21 xmlrpc;
 213.24.126.224 xmlrpc;
 213.24.127.161 xmlrpc;
 213.24.133.126 xmlrpc;
