Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1421,6 +1421,7 @@
 37.235.168.207 xmlrpc;
 37.252.255.135 xmlrpc;
 37.78.251.70 xmlrpc;
+37.79.141.169 xmlrpc;
 37.79.43.247 xmlrpc;
 37.79.8.195 xmlrpc;
 39.101.185.186 xmlrpc;
