--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -869,6 +869,7 @@
 185.152.95.108 xmlrpc;
 185.16.137.107 xmlrpc;
 185.166.161.123 xmlrpc;
+185.17.0.83 xmlrpc;
 185.17.129.240 xmlrpc;
 185.17.88.88 xmlrpc;
 185.174.136.114 xmlrpc;
@@ -1718,6 +1719,7 @@
 5.165.128.36 xmlrpc;
 5.165.197.51 xmlrpc;
 5.165.255.166 xmlrpc;
+5.165.43.124 xmlrpc;
 5.166.225.27 xmlrpc;
 5.166.72.32 xmlrpc;
 5.167.168.8 xmlrpc;
