--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2155,6 +2155,7 @@
 94.241.242.62 xmlrpc;
 94.241.54.217 xmlrpc;
 94.242.53.114 xmlrpc;
+94.253.109.227 xmlrpc;
 94.253.110.1 xmlrpc;
 94.253.35.212 xmlrpc;
 94.253.66.135 xmlrpc;
