Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1039,6 +1039,7 @@
 193.233.123.20 xmlrpc;
 193.233.56.5 xmlrpc;
 193.233.82.239 xmlrpc;
+193.233.88.234 xmlrpc;
 193.233.91.58 xmlrpc;
 193.32.202.56 xmlrpc;
 193.46.77.189 xmlrpc;
@@ -2160,6 +2161,7 @@
 94.253.35.212 xmlrpc;
 94.253.66.135 xmlrpc;
 94.28.198.76 xmlrpc;
+94.29.10.69 xmlrpc;
 94.29.22.181 xmlrpc;
 94.41.237.45 xmlrpc;
 94.50.219.97 xmlrpc;
