--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1072,6 +1072,7 @@
 195.184.202.107 xmlrpc;
 195.19.121.226 xmlrpc;
 195.19.122.122 xmlrpc;
+195.19.123.225 xmlrpc;
 195.19.126.245 xmlrpc;
 195.19.126.44 xmlrpc;
 195.2.67.223 xmlrpc;
@@ -1905,6 +1906,7 @@
 80.83.250.250 xmlrpc;
 80.87.195.44 xmlrpc;
 80.95.45.13 xmlrpc;
+81.163.129.11 xmlrpc;
 81.163.148.118 xmlrpc;
 81.163.86.146 xmlrpc;
 81.177.126.193 xmlrpc;
@@ -2219,6 +2221,7 @@
 95.24.151.153 xmlrpc;
 95.24.173.132 xmlrpc;
 95.24.177.195 xmlrpc;
+95.24.178.162 xmlrpc;
 95.24.202.16 xmlrpc;
 95.24.21.47 xmlrpc;
 95.24.230.81 xmlrpc;
