--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1350,6 +1350,7 @@
 31.207.166.157 xmlrpc;
 31.220.110.3 xmlrpc;
 31.23.18.203 xmlrpc;
+31.23.195.198 xmlrpc;
 31.23.93.193 xmlrpc;
 31.29.194.172 xmlrpc;
 31.31.196.139 xmlrpc;
