--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1530,6 +1530,7 @@
 45.11.20.77 xmlrpc;
 45.11.5.249 xmlrpc;
 45.126.126.79 xmlrpc;
+45.129.140.222 xmlrpc;
 45.130.228.251 xmlrpc;
 45.132.184.218 xmlrpc;
 45.132.187.189 xmlrpc;
