Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2217,6 +2217,7 @@
 95.24.14.88 xmlrpc;
 95.24.146.230 xmlrpc;
 95.24.151.153 xmlrpc;
+95.24.16.105 xmlrpc;
 95.24.173.132 xmlrpc;
 95.24.177.195 xmlrpc;
 95.24.178.162 xmlrpc;
