--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2252,6 +2252,7 @@
 95.32.182.101 xmlrpc;
 95.32.218.48 xmlrpc;
 95.32.85.194 xmlrpc;
+95.37.218.139 xmlrpc;
 95.37.224.58 xmlrpc;
 95.37.58.155 xmlrpc;
 95.52.132.196 xmlrpc;
