--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2248,6 +2248,7 @@
 95.32.182.101 xmlrpc;
 95.32.218.48 xmlrpc;
 95.32.85.194 xmlrpc;
+95.37.119.209 xmlrpc;
 95.37.218.139 xmlrpc;
 95.37.224.58 xmlrpc;
 95.37.58.155 xmlrpc;
