--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2012,6 +2012,7 @@
 89.109.48.63 xmlrpc;
 89.109.51.174 xmlrpc;
 89.113.136.251 xmlrpc;
+89.151.187.127 xmlrpc;
 89.151.187.86 xmlrpc;
 89.178.46.194 xmlrpc;
 89.187.163.203 xmlrpc;
