Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1172,6 +1172,7 @@
 212.35.168.172 xmlrpc;
 212.35.181.168 xmlrpc;
 212.35.185.233 xmlrpc;
+212.46.10.6 xmlrpc;
 212.7.225.92 xmlrpc;
 212.7.229.227 xmlrpc;
 212.94.17.152 xmlrpc;
