Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2159,6 +2159,7 @@
 94.28.198.76 xmlrpc;
 94.29.10.69 xmlrpc;
 94.29.22.181 xmlrpc;
+94.29.8.241 xmlrpc;
 94.41.237.45 xmlrpc;
 94.50.219.97 xmlrpc;
 94.51.117.162 xmlrpc;
