--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1944,6 +1944,7 @@
 83.234.150.32 xmlrpc;
 83.234.150.33 xmlrpc;
 83.69.0.3 xmlrpc;
+83.69.0.5 xmlrpc;
 83.69.6.197 xmlrpc;
 83.97.109.100 xmlrpc;
 83.97.73.159 xmlrpc;
