--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -722,6 +722,7 @@
 178.178.107.18 xmlrpc;
 178.178.196.245 xmlrpc;
 178.184.205.252 xmlrpc;
+178.186.20.158 xmlrpc;
 178.186.250.101 xmlrpc;
 178.187.226.222 xmlrpc;
 178.20.31.226 xmlrpc;
@@ -1429,6 +1430,7 @@
 37.204.183.72 xmlrpc;
 37.21.92.91 xmlrpc;
 37.230.116.109 xmlrpc;
+37.230.136.224 xmlrpc;
 37.230.136.226 xmlrpc;
 37.235.168.207 xmlrpc;
 37.252.255.135 xmlrpc;
@@ -1930,6 +1932,7 @@
 81.69.176.253 xmlrpc;
 81.69.199.60 xmlrpc;
 81.71.5.172 xmlrpc;
+81.9.126.137 xmlrpc;
 82.114.238.109 xmlrpc;
 82.149.135.175 xmlrpc;
 82.156.116.176 xmlrpc;
