Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1421,6 +1421,7 @@
 37.140.192.75 xmlrpc;
 37.146.132.22 xmlrpc;
 37.18.38.115 xmlrpc;
+37.18.38.96 xmlrpc;
 37.188.16.215 xmlrpc;
 37.19.77.182 xmlrpc;
 37.19.77.187 xmlrpc;
@@ -1904,6 +1905,7 @@
 80.244.32.159 xmlrpc;
 80.244.42.72 xmlrpc;
 80.244.44.132 xmlrpc;
+80.244.44.140 xmlrpc;
 80.244.44.16 xmlrpc;
 80.244.45.193 xmlrpc;
 80.244.45.35 xmlrpc;
@@ -2058,6 +2060,7 @@
 91.214.82.70 xmlrpc;
 91.215.122.237 xmlrpc;
 91.223.118.42 xmlrpc;
+91.223.32.105 xmlrpc;
 91.224.140.142 xmlrpc;
 91.224.140.229 xmlrpc;
 91.224.140.250 xmlrpc;
