Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2127,6 +2127,7 @@
 92.255.134.182 xmlrpc;
 92.255.211.127 xmlrpc;
 92.37.157.121 xmlrpc;
+92.42.43.178 xmlrpc;
 92.53.123.166 xmlrpc;
 92.53.96.103 xmlrpc;
 92.53.96.106 xmlrpc;
