--- a/nginx-config-files/git.conf
+++ b/nginx-config-files/git.conf
@@ -665,6 +665,7 @@
 2804:14c:154:a243:6267:c8b:5bfd:85cf git;
 2804:14c:154:a243:eda9:db39:fff4:d101 git;
 2a0e:1bc1:129:1045::1 git;
+2a0e:1bc1:129:10cf::1 git;
 3.101.138.250 git;
 3.101.141.1 git;
 3.101.144.27 git;
