--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -732,6 +732,7 @@
 178.205.54.196 xmlrpc;
 178.210.68.1 xmlrpc;
 178.212.139.113 xmlrpc;
+178.212.250.76 xmlrpc;
 178.214.164.135 xmlrpc;
 178.215.157.24 xmlrpc;
 178.216.161.92 xmlrpc;
