Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1923,6 +1923,7 @@
 80.251.232.222 xmlrpc;
 80.64.101.195 xmlrpc;
 80.64.26.125 xmlrpc;
+80.70.109.152 xmlrpc;
 80.83.250.250 xmlrpc;
 80.87.195.44 xmlrpc;
 80.95.45.13 xmlrpc;
@@ -2097,6 +2098,7 @@
 91.241.198.226 xmlrpc;
 91.241.230.33 xmlrpc;
 91.241.233.61 xmlrpc;
+91.241.255.48 xmlrpc;
 91.243.90.80 xmlrpc;
 91.243.91.154 xmlrpc;
 91.243.91.89 xmlrpc;
