Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -2021,6 +2021,7 @@
 87.250.224.247 xmlrpc;
 87.250.224.248 xmlrpc;
 87.250.224.253 xmlrpc;
+87.250.224.26 xmlrpc;
 87.250.224.5 xmlrpc;
 87.250.224.52 xmlrpc;
 87.250.224.6 xmlrpc;
@@ -2229,6 +2230,7 @@
 95.165.46.74 xmlrpc;
 95.171.13.33 xmlrpc;
 95.174.98.192 xmlrpc;
+95.179.120.131 xmlrpc;
 95.179.123.90 xmlrpc;
 95.179.94.122 xmlrpc;
 95.181.137.42 xmlrpc;
