Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -993,6 +993,7 @@
 188.17.104.99 xmlrpc;
 188.17.168.222 xmlrpc;
 188.17.169.69 xmlrpc;
+188.17.194.32 xmlrpc;
 188.17.90.8 xmlrpc;
 188.170.76.130 xmlrpc;
 188.18.241.80 xmlrpc;
@@ -1428,6 +1429,7 @@
 37.18.38.115 xmlrpc;
 37.18.38.96 xmlrpc;
 37.188.16.215 xmlrpc;
+37.19.76.30 xmlrpc;
 37.19.77.182 xmlrpc;
 37.19.77.187 xmlrpc;
 37.193.54.208 xmlrpc;
@@ -1607,6 +1609,7 @@
 46.165.63.246 xmlrpc;
 46.17.251.225 xmlrpc;
 46.17.254.160 xmlrpc;
+46.172.30.72 xmlrpc;
 46.174.53.21 xmlrpc;
 46.175.208.244 xmlrpc;
 46.175.24.236 xmlrpc;
