--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1020,6 +1020,7 @@
 188.32.237.199 xmlrpc;
 188.64.167.176 xmlrpc;
 188.65.17.205 xmlrpc;
+188.65.17.56 xmlrpc;
 188.92.195.2 xmlrpc;
 191.101.230.117 xmlrpc;
 192.162.64.176 xmlrpc;
