--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -873,6 +873,7 @@
 185.146.74.105 xmlrpc;
 185.15.38.126 xmlrpc;
 185.15.38.175 xmlrpc;
+185.15.38.31 xmlrpc;
 185.152.95.108 xmlrpc;
 185.16.137.107 xmlrpc;
 185.166.161.123 xmlrpc;
