--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1852,6 +1852,7 @@
 68.183.228.161 xmlrpc;
 68.183.234.223 xmlrpc;
 77.220.150.102 xmlrpc;
+77.222.103.146 xmlrpc;
 77.222.106.102 xmlrpc;
 77.222.40.147 xmlrpc;
 77.222.54.219 xmlrpc;
@@ -2049,6 +2050,7 @@
 89.109.48.63 xmlrpc;
 89.109.51.174 xmlrpc;
 89.113.136.251 xmlrpc;
+89.113.26.208 xmlrpc;
 89.151.187.127 xmlrpc;
 89.151.187.86 xmlrpc;
 89.178.46.194 xmlrpc;
