--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1604,6 +1604,7 @@
 46.147.112.137 xmlrpc;
 46.149.34.39 xmlrpc;
 46.151.151.94 xmlrpc;
+46.158.167.75 xmlrpc;
 46.161.60.233 xmlrpc;
 46.161.60.36 xmlrpc;
 46.161.60.53 xmlrpc;
