--- a/nginx-config-files/git.conf
+++ b/nginx-config-files/git.conf
@@ -658,6 +658,7 @@
 2804:14c:154:a243:4c97:f6af:3018:aacf git;
 2804:14c:154:a243:6267:c8b:5bfd:85cf git;
 2804:14c:154:a243:eda9:db39:fff4:d101 git;
+2a0e:1bc0:193:1030::1 git;
 2a0e:1bc1:129:1045::1 git;
 2a0e:1bc1:129:10cf::1 git;
 3.101.138.250 git;
