Push from Scanner

--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1123,6 +1123,7 @@
 198.44.173.88 xmlrpc;
 2.56.91.17 xmlrpc;
 2.57.80.213 xmlrpc;
+2.59.50.4 xmlrpc;
 2.60.133.125 xmlrpc;
 2.60.86.121 xmlrpc;
 2.95.50.82 xmlrpc;
