--- a/nginx-config-files/xmlrpc.conf
+++ b/nginx-config-files/xmlrpc.conf
@@ -1582,6 +1582,7 @@
 45.83.94.20 xmlrpc;
 45.83.94.4 xmlrpc;
 45.84.176.120 xmlrpc;
+45.84.177.93 xmlrpc;
 45.86.1.4 xmlrpc;
 45.86.1.81 xmlrpc;
 45.86.1.86 xmlrpc;
